--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,11 +4,8 @@ server:
     include-binding-errors: always
 
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/mediaTracker
-    username: root
-    password: Root7007
-    driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active: local
 
   jpa:
     open-in-view: true
